@@ -29,8 +29,8 @@
 *   Boston, MA  02110-1301  USA
 */
 /****************************************************************
-* $Revision: 1.31 $
-* $Date: 2010/04/15 09:27:31 $
+* $Revision: 1.32 $
+* $Date: 2010/04/16 08:08:24 $
 *****************************************************************/
 
 #ifdef APOT
@@ -231,7 +231,7 @@ void ms_value(real r, real *p, real *f)
 
   x = 1 - r / p[2];
 
-  *f = p[0] * ( exp(p[1] * x) - 2 * exp( (p[1] * x) / 2) );
+  *f = p[0] * (exp(p[1] * x) - 2 * exp((p[1] * x) / 2));
 
 #ifdef DIPOLE
   *f += p[3] * p[4] * ew_eps * erfc(ew_kappa * r) / r;
